<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.tunahanozatac.cryptoapps.domain.model.CoinDetailUI" />

        <variable
            name="currentPrice"
            type="Double" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/lavender"
                android:progressTint="@color/lavender"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/favorite_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFavourite">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_big">

                    <ImageView
                        android:id="@+id/img_coin"
                        setImage="@{model.image}"
                        android:layout_width="@dimen/size_coin_image"
                        android:layout_height="@dimen/size_coin_image"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_big"
                        android:src="@drawable/time_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:text="@{model.name}"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_max"
                        app:layout_constraintStart_toEndOf="@id/img_coin"
                        app:layout_constraintTop_toTopOf="@id/img_coin" />

                    <TextView
                        android:id="@+id/txtCoinCurrentPriceTRY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:layout_marginTop="@dimen/margin_medium"
                        android:text="@{model.coinId}"
                        android:textSize="@dimen/text_size_min"
                        app:layout_constraintStart_toEndOf="@id/img_coin"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />

                    <TextView
                        android:id="@+id/tv_current_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_min"
                        android:layout_marginEnd="@dimen/margin_big"
                        android:text="@{'$'+String.valueOf(currentPrice)}"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/img_coin" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_price_change_percentage_in_24h"
                        priceChangePercentage24h="@{model.priceChangePercentage24h}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_min"
                        android:layout_marginEnd="@dimen/margin_big"
                        android:layout_marginBottom="@dimen/margin_min"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="@id/img_coin"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/viewSeperator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_line_min"
                android:background="@color/lavender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardInfo" />

            <TextView
                android:id="@+id/txtRefreshTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/coin_refresh_time"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/viewSeperator" />

            <TextView
                android:id="@+id/txtHashingAlgorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/coin_hashing_algorithm"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/til_second" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHashingAlgorithm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                app:layout_constraintTop_toBottomOf="@id/txtHashingAlgorithm">

                <TextView
                    android:id="@+id/txtCoinHashingAlgorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginTop="@dimen/margin_min"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:layout_marginBottom="@dimen/margin_min"
                    android:background="@color/white"
                    android:text="@{model.hashingAlgorithm}"
                    android:textColor="@color/black"
                    tools:text="hashingAlgorithm" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_big"
                android:maxLines="10"
                android:text="@string/coin_description"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/cardHashingAlgorithm" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_min"
                android:layout_marginTop="@dimen/margin_min"
                android:layout_marginEnd="@dimen/margin_min"
                android:background="@color/white"
                android:padding="@dimen/margin_min"
                android:text="@{model.description}"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_second"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorTextColor="@color/lavender"
                app:hintTextColor="@color/lavender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtRefreshTime">

                <AutoCompleteTextView
                    android:id="@+id/act_second"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dropDownHeight="wrap_content"
                    android:hint="@string/coin_refresh_time"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@id/til_second"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtRefreshTime"
                app:layout_constraintTop_toTopOf="@id/til_second" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>